# fun-with-maps

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli.py  closest_country.py  country_analysis.py  data_processing.py  docker-compose.yml  examples.py  llm_instructions.md  main.py  main_refactored.py  map_fetcher.py  parallel_processing.py  point_generation.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  script.py  setup.py  test_country_selector.py  tsp_solver.py  tsp_utils.py  utils.py  visualization.py  voronoi_analysis.py  voronoi_visualization.py
backend/: main.py
backend/static/: index.html  script.js  style.css
backend/templates/: index.html
docs/diagrams/: activity_diagram.txt  use_case_diagram.txt  user_diagram.txt
examples/: examples.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  script.js  style.css  test.html  vite.config.js
frontend/src/: App.jsx  App.test.jsx  Celebration.jsx  Game.jsx  Game.test.jsx  GuessInput.jsx  HintList.jsx  HintList.test.jsx
frontend/tests/: basic.spec.js
fun_with_maps/: __init__.py  cli.py
fun_with_maps/analysis/: __init__.py  parallel_processing.py  tsp_solver.py  voronoi_analysis.py
fun_with_maps/core/: __init__.py  country_analysis.py  country_selector.py  map_fetcher.py  point_generation.py
fun_with_maps/utils/: utils.py
fun_with_maps/visualization/: __init__.py  visualization.py  voronoi_visualization.py
scripts/: cli.py  diagnose_voronoi.py  install_with_uv.sh  main.py
tests/: __init__.py  conftest.py  test_backend.py  test_cli_commands.py  test_closest_country.py  test_country_analysis.py  test_examples.py  test_integration.py  test_main.py  test_main_script.py  test_map_fetcher.py  test_pdf_generation.py  test_point_generation.py  test_regions.py  test_visualization.py  test_voronoi.py  test_zero_overlaps.py
